# holo-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cmd  vrrp.conf
.github/workflows/: ci.yaml
docker/: Dockerfile  README.md
src/: error.rs  grpc.rs  internal_commands.rs  internal_commands.xml  main.rs  parser.rs  pipe.rs  session.rs  terminal.rs  token.rs  token_xml.rs  token_yang.rs
src/client/: grpc.rs  mod.rs
