[package]
name = "holo-cli"
version = "0.4.0"
authors = ["Renato Westphal <renatowestphal@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
indextree = "4.3"
prettytable-rs = "0.10"
reedline = "0.31.0"
xml-rs = "0.8"

clap = "2.33"
derive-new = "0.5"
enum-as-inner = "0.6"
itertools = "0.10"
prost = "0.12"
similar = "2.0"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.11", features = ["tls"] }
yang3 = { version = "0.12", features = ["bundled"] }

[build-dependencies]
tonic-build = "0.11"

[lints.rust]
rust_2018_idioms = "warn"
