[package]
name = "holo-cli"
version = "0.5.0"
authors = ["Renato Westphal <renatowestphal@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
indextree = "4.3"
prettytable-rs = "0.10"
reedline = "0.38.0"
xml-rs = "0.8"

clap = "2.33"
derive-new = "0.5"
enum-as-inner = "0.6"
itertools = "0.10"
prost = "0.13"
similar = "2.0"
tokio = { version = "1.0", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
yang3 = { version = "0.16", features = ["bundled"] }

[build-dependencies]
tonic-build = "0.12"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
result_large_err = "allow"
uninlined_format_args = "allow"

[profile.release]
lto = true		# Enable link-time optimization for improved runtime performance
codegen-units = 1	# Set the number of codegen units to 1 to increase optimization opportunities

[profile.small]
inherits = "release"	# Inherit settings from the release profile
opt-level = "z"		# Optimize for small binary size
strip = true		# Strip symbols to further reduce binary size
